# teach-me-concepts-llm

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: prompt_template.py  topics.py
src/: gemini.py
utils/: formatter.py  logger.py
